# chorus-test

./: .gitignore  AGENTS.md  CLAUDE.md  PRIVACY.md  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
plugins/: Cargo.toml  README.md  build.rs
plugins/ios/: Package.swift  README.md
plugins/ios/Sources/: ExamplePlugin.swift
plugins/permissions/: default.toml
plugins/permissions/autogenerated/: reference.md
plugins/permissions/autogenerated/commands/: begin_task.toml  end_task.toml
plugins/permissions/schemas/: schema.json
plugins/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
script/: build-unsigned-ipa.sh
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json  tauri.dev.conf.json  tauri.ios.conf.json  tauri.qa.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  migrations.rs
src/core/chorus/: AttachmentsHelpers.ts  MediaTools.ts  Models.ts  WebTools.ts  simpleLLM.ts
src/core/chorus/ModelProviders/: ProviderOpenRouter.ts
src/core/chorus/api/: AppMetadataAPI.ts  ChatAPI.ts  ExportAPI.ts  MemoryAPI.ts  MessageAPI.ts  (+3 more)
src/ui/: App.css  App.tsx  DesktopRoot.tsx  MobileRoot.tsx  main.tsx  mobilePostHogStub.ts
src/ui/components/: AppSidebar.tsx  ChatInput.tsx
src/ui/context/: AppContext.ts
src/ui/hooks/: useEdgeSwipe.ts  useVoiceRecorder.ts
src/ui/lib/: mobileColorPresets.ts  mobileModels.ts  platform.ts
src/ui/providers/: AppProvider.tsx
src/ui/themes/: index.ts
(+7 files in other folders)
